# ZenCycle

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  hardhat.config.js  package.json  rofl.yaml
artifacts/contracts/ScoreRegistry.sol/: ScoreRegistry.dbg.json  ScoreRegistry.json
cache/: solidity-files-cache.json
contracts/: ScoreRegistry.sol
scripts/: deploy.js
src/: lib.rs  main.rs
