[package]
name = "ethdam"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Oasis SDK'yı doğrudan kullanmak istersen:
oasis-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", branch = "main",  package = "rofl-utils" }
